Attach the covert code(Netflix->Movielens)

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,14 +1,21 @@
-/CommonExpert.class
-/ExpertMeasure.class
-/KNearestNeighbor.class
-/MyFavoriteExperts.class
-/Parser$User.class
-/Parser.class
 /ParserMovieLens$User.class
 /ParserMovieLens.class
 /ParserSVM.class
 /PersonalizedExpert.class
 /RandomSearch.class
+/SMFactory.class
 /Similarity.class
 /SparseMatrix.class
 /Tools.class
+/CommonExpert.class
+/EntryInfo.class
+/ExpertMeasure.class
+/KNearestNeighbor.class
+/MyFavoriteExperts.class
+/Parser$User.class
+/Parser.class
+/CalculateSimilarity.class
+/ConvertMovie.class
+/ConvertRating.class
+/Filewalker.class
+/TestClass.class
